--- a/TodoApp/views/detail.ejs
+++ b/TodoApp/views/detail.ejs
@@ -32,44 +32,10 @@
         </div>
       </nav>
 
-      <h4 class="ml-2 my3">서버에서 가져온 할 일 리스트</h4>
-      <ul class="list-group">
-        <% for(var i = 0; i < posts.length; i++){ %>
-        <li class="list-group-item">
-          <p>글번호: <%= posts[i]._id %></p>
-          <h4>할일 제목: <%= posts[i].제목 %> </h4>
-          <p>할일 마감날짜: <%= posts[i].날짜 %> </p>
-          <button class="delete" data-id="<%= posts[i]._id %>">삭제</button>
-        </li>
-        <%}%>
-      </ul>
-   
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script>
-      $('.delete').click(function(e){
-        var postNumber = e.target.dataset.id;
-        postNumber = parseInt(postNumber);
-        var thisClick = $(this);
-        $.ajax({
-          method: 'DELETE',
-          url : '/delete',
-          data : {_id: postNumber}
-        }).done(function(result){
-          console.log('성공!')
-          thisClick.parent('li').fadeOut();
-        }).fail(function(xhr, txstStatus, errorThrown){
-          console.log(xhr, txstStatus, errorThrown);
-        })
-      });
-
-
-    </script>
-
-
-
-
-    
+      <h4></h4>
+      <h4>제목: <%= data.제목 %> </h4>    
+      <h4>날짜: <%= data.날짜 %> </h4>    
+      
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
-
   </body>
 </html>
