--- a/TodoApp/views/list.ejs
+++ b/TodoApp/views/list.ejs
@@ -1,75 +1,68 @@
 <!doctype html>
 <html>
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <title>Hello, world!</title>
-  </head>
-  <body>
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+    integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Todo App</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Write</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">llllll</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
+  <link rel="stylesheet" href="/public/main.css">
 
-      <h4 class="ml-2 my3">서버에서 가져온 할 일 리스트</h4>
-      <ul class="list-group">
-        <% for(var i = 0; i < posts.length; i++){ %>
+  <title>List</title>
+</head>
+
+<body>
+
+  <%- include('nav.html')  %>
+
+    <h4 class="ml-2 my3 text-center">서버에서 가져온 할 일 리스트</h4>
+    <div class="container">
+    <ul class="list-group">
+      <% for(var i=0; i < posts.length; i++){ %>
         <li class="list-group-item">
-          <p>글번호: <%= posts[i]._id %></p>
-          <h4>할일 제목: <%= posts[i].제목 %> </h4>
-          <p>할일 마감날짜: <%= posts[i].날짜 %> </p>
-          <button class="delete" data-id="<%= posts[i]._id %>">삭제</button>
+          <p>글번호: <%= posts[i]._id %>
+          </p>
+          <h4>할일 제목: <a href="/detail/<%= posts[i]._id %>">
+              <%= posts[i].제목 %>
+            </a> </h4>
+          <!-- href 부분에 ejs태그 사용하여 post의 id를 넣어 해결함... -->
+          <!-- 이를 통해서 href는 html태그 안에 자유롭게 삽입이 가능하다는 것을 알 수 있당.. -->
+          <p>할일 마감날짜: <%= posts[i].날짜 %>
+          </p>
+          <button class="btn btn-danger delete" data-id="<%= posts[i]._id %>">삭제</button>
         </li>
         <%}%>
-      </ul>
-   
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script>
-      $('.delete').click(function(e){
-        var postNumber = e.target.dataset.id;
-        postNumber = parseInt(postNumber);
-        var thisClick = $(this);
-        $.ajax({
-          method: 'DELETE',
-          url : '/delete',
-          data : {_id: postNumber}
-        }).done(function(result){
-          console.log('성공!')
-          thisClick.parent('li').fadeOut();
-        }).fail(function(xhr, txstStatus, errorThrown){
-          console.log(xhr, txstStatus, errorThrown);
-        })
-      });
+    </ul>
+  </div>
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+  <script>
+    $('.delete').click(function (e) {
+      var postNumber = e.target.dataset.id;
+      postNumber = parseInt(postNumber);
+      var thisClick = $(this);
+      $.ajax({
+        method: 'DELETE',
+        url: '/delete',
+        data: { _id: postNumber }
+      }).done(function (result) {
+        console.log('성공!')
+        thisClick.parent('li').fadeOut();
+      }).fail(function (xhr, txstStatus, errorThrown) {
+        console.log(xhr, txstStatus, errorThrown);
+        console.log('실패')
+      })
+    });
 
 
-    </script>
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns"
+    crossorigin="anonymous"></script>
 
+</body>
 
-
-
-    
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
-
-  </body>
 </html>
