--- a/TodoApp/views/edit.ejs
+++ b/TodoApp/views/edit.ejs
@@ -14,11 +14,12 @@
 
     <h4 class="container mt-4"><strong>글 수정페이지</strong></h4>
     <div class="container mt-3">
-        <form action="/add?_method=PUT" method="POST">
+        <form action="/edit?_method=PUT" method="POST">
         <div class="form-group">
             <label>오늘의 할일</label>
+            <input value="<%= posts._id %>" name="id" style="display: none;">
             <input value="<%= posts.제목 %>" type="text" class="form-control" name="title">
-
+ 
         </div>
         <div class="form-group">
             <label>날짜</label>
