--- a/TodoApp/views/list.ejs
+++ b/TodoApp/views/list.ejs
@@ -16,10 +16,25 @@
 </head>
 
 <body>
-
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+  
   <%- include('nav.html')  %>
 
     <h4 class="ml-2 my3 text-center">서버에서 가져온 할 일 리스트</h4>
+    <div class="container input-group mb-2">
+      <input class="form-control" id="userSearchInput">
+      <button class="input-group-append btn btn-danger" id="search">검색</button>
+    </div>
+
+    <script>
+      $('#search').click(function(){
+        var userInput = $('#userSearchInput').val()
+        window.location.replace('/search?value=' + userInput)
+      })
+    </script>
+
+
+
     <div class="container">
     <ul class="list-group">
       <% for(var i=0; i < posts.length; i++){ %>
@@ -36,7 +51,6 @@
         <%}%>
     </ul>
   </div>
-  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
   <script>
     $('.delete').click(function (e) {
       var postNumber = e.target.dataset.id;
