--- a/TodoApp/views/login.ejs
+++ b/TodoApp/views/login.ejs
@@ -3,10 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
-
-
     <title>login</title>
   </head>
   <body>
@@ -26,6 +23,20 @@
         <input type="text" class="form-control" name="pw">
       </div>
       <button type="submit" class="btn btn-outline-secondary">Submit</button>
+    </form>
+  </div>
+
+  <div class="container mt-3">
+    <form action="/register" method="POST">
+      <div class="form-group">
+        <label>ID</label>
+        <input type="text" class="form-control" name="id">
+      </div>
+      <div class="form-group">
+        <label>Password</label>
+        <input type="text" class="form-control" name="pw">
+      </div>
+      <button type="submit" class="btn btn-outline-secondary">가입</button>
     </form>
   </div>
 
