--- a/Hangman_js/style.css
+++ b/Hangman_js/style.css
@@ -9,10 +9,23 @@ body {
 }
 
 .container {
-  width: 800px;
+  width: 700px;
 }
 
 button {
   width: 50px;
   height: 50px;
+  border-radius: 20%;
+}
+
+.word {
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+.wordletter {
+  display: inline-block;
+  width: 50px;
+  height: 50px;
+  font-size: 30px;
 }/*# sourceMappingURL=style.css.map */
