--- a/style/style.css
+++ b/style/style.css
@@ -3,6 +3,36 @@
   padding: 0;
 }
 
+body {
+  height: 100%;
+  overflow: hidden;
+}
+
 ul {
   list-style: none;
+}
+
+.score {
+  text-align: center;
+  font-size: 36px;
+  margin-bottom: 2rem;
+}
+
+.blockArea > ul {
+  border: 1px solid black;
+}
+
+.blockArea > ul > li {
+  width: 100%;
+  height: 25px;
+}
+
+.blockArea > ul > li > ul {
+  display: flex;
+}
+
+.blockArea > ul > li > ul > li {
+  width: 25px;
+  height: 25px;
+  outline: 1px solid #ccc;
 }/*# sourceMappingURL=style.css.map */
