--- a/style/style.css
+++ b/style/style.css
@@ -37,4 +37,8 @@ ul {
   width: 25px;
   height: 25px;
   outline: 1px solid #ccc;
+}
+
+.block_T {
+  background: yellow;
 }/*# sourceMappingURL=style.css.map */
