--- a/style/style.css
+++ b/style/style.css
@@ -39,6 +39,53 @@ ul {
   outline: 1px solid #ccc;
 }
 
-.block_T {
+.block_I {
+  background: skyblue;
+}
+
+.block_O {
   background: yellow;
+}
+
+.block_L {
+  background: orange;
+}
+
+.block_LR {
+  background: blue;
+}
+
+.block_T {
+  background: #c300ff;
+}
+
+.block_Z {
+  background: red;
+}
+
+.block_S {
+  background: green;
+}
+
+.gametext {
+  display: none;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.7);
+  left: 0;
+  top: 0;
+  color: #fff;
+  font-size: 50px;
+}
+
+.gametext > button {
+  padding: 0.5rem 1rem;
+  color: #fff;
+  background: salmon;
+  border: none;
+  cursor: pointer;
 }/*# sourceMappingURL=style.css.map */
