Add score combo, 7blocks set random

--- a/style/style.scss
+++ b/style/style.scss
@@ -103,7 +103,7 @@ ul {
 .nextblock > ul > li > ul > li {
     width: 25px;
     height: 25px;
-    // outline: 1px solid #ccc;
+    outline: 1px solid #ccc;
 }
 
 .block_I{
